# langchain1.0-family-template

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_EN.md  langgraph.json  main.py  opencode.jsonc  pyproject.toml  test.ipynb
.qoder/rules/: langchain-rules.md
notebooks/: 1.deep_research.ipynb
src/agents/: __init__.py  deep_research_agent.py  weather_agent.py
src/models/: __init__.py  ali_bailian.py  bytedance_volcengine.py
src/prompts/: __init__.py  template.py
src/prompts/templates/: deep_research_agent.jinja-md
src/tools/: __init__.py  internet_search.py  weather.py
