[project]
name = "study-langchain"
version = "0.1.0"
description = "学习与实践Langchain全家桶"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]
