[project]
name = "langchain1.0-family-template"
version = "0.1.0"
description = "Langchain 1.0 全家桶（LangChain、LangGraph、LangSmith、DeepAgents）模板项目"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.1",
    "jinja2>=3.1.6",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.3",
    "langgraph-cli[inmem]>=0.4.11",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]
